Change position property from relative to center

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       background-color: white;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
       border-radius: 16px;
-      position: relative;
+      position: center;
       scroll-snap-align: start;
       margin: 0 10px;
     }
